--- a/CheckYourEligibility-FrontEnd/CheckYourEligibility-FrontEnd.csproj
+++ b/CheckYourEligibility-FrontEnd/CheckYourEligibility-FrontEnd.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <Reference Include="CheckYourEligibility.Domain">
-      <HintPath>..\..\check-your-eligibility\CheckYourEligibility.Domain\bin\Debug\net8.0\CheckYourEligibility.Domain.dll</HintPath>
+      <HintPath>CheckYourEligibility.Domain.dll</HintPath>
     </Reference>
   </ItemGroup>
 
