--- a/CheckYourEligibility-FrontEnd/CheckYourEligibility-FrontEnd.csproj
+++ b/CheckYourEligibility-FrontEnd/CheckYourEligibility-FrontEnd.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Attributes\NinoAttribute.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="CheckYourEligibility.Domain">
       <HintPath>CheckYourEligibility.Domain.dll</HintPath>
     </Reference>
