--- a/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
+++ b/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CheckYourEligibility.Domain">
+      <HintPath>..\CheckYourEligibility-FrontEnd\CheckYourEligibility.Domain.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
