--- a/CheckYourEligibility-FrontEnd/appsettings.json
+++ b/CheckYourEligibility-FrontEnd/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
+  //"EcsBaseUrl": "https://localhost:7117",
+  "EcsFsmControllerUrl": "/FreeSchoolMeals"
 }
