Create the following pages:
Outcomes
Nass
Loader

Apply further validation on NI number and NASS lengths

Create Poll_Status method that is called by AJAX script on the Loader page.

Create GetStatus call on ECSService project.

--- a/CheckYourEligibility-FrontEnd/CheckYourEligibility-FrontEnd.csproj
+++ b/CheckYourEligibility-FrontEnd/CheckYourEligibility-FrontEnd.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Content Include="Attributes\NinoAttribute.cs" />
+    <Content Include="Attributes\NameAttribute.cs" />
   </ItemGroup>
 
   <ItemGroup>
