--- a/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
+++ b/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
