--- a/CheckYourEligibility-FrontEnd.Tests/CheckYourEligibility-FrontEnd.Tests.csproj
+++ b/CheckYourEligibility-FrontEnd.Tests/CheckYourEligibility-FrontEnd.Tests.csproj
@@ -27,4 +27,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
