--- a/CheckYourEligibility-FrontEnd/appsettings.json
+++ b/CheckYourEligibility-FrontEnd/appsettings.json
@@ -7,7 +7,11 @@
   },
   "AllowedHosts": "*",
 
-  "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
-  //"EcsBaseUrl": "https://localhost:7117",
-  "EcsFsmControllerUrl": "/FreeSchoolMeals"
+  //"EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
+  "EcsBaseUrl": "https://localhost:7117",
+  "EcsFsmControllerUrl": "/FreeSchoolMeals",
+  "EcsAuthorisationUrl": "/api/Login",
+  "EcsAuthorisationUsername": "ecsUiUser",
+  "EcsAuthorisationEmail": "ecsUi@education.gov.uk",
+  "EcsAuthorisationPassword": "QgX{P1*eB94lQy&"
 }
