- Add Child method - Remove Child method - School Search and Select method
- Styled Page
- Validation applied

--- a/CheckYourEligibility-FrontEnd/appsettings.json
+++ b/CheckYourEligibility-FrontEnd/appsettings.json
@@ -9,5 +9,6 @@
 
   "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
   //"EcsBaseUrl": "https://localhost:7117",
-  "EcsFsmControllerUrl": "/FreeSchoolMeals"
+  "EcsFsmControllerUrl": "/FreeSchoolMeals",
+    "EcsFsmSchoolUrl":  "/Schools"
 }
