--- a/CheckYourEligibility-FrontEnd/appsettings.json
+++ b/CheckYourEligibility-FrontEnd/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
 
-  //"EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
-  "EcsBaseUrl": "https://localhost:7117",
+  "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
+  //"EcsBaseUrl": "https://localhost:7117",
   "EcsFsmControllerUrl": "/FreeSchoolMeals",
   "EcsAuthorisationUrl": "/api/Login",
   "EcsAuthorisationUsername": "ecsUiUser",
