--- a/CheckYourEligibility-FrontEnd/appsettings.json
+++ b/CheckYourEligibility-FrontEnd/appsettings.json
@@ -9,6 +9,7 @@
 
   "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
   //"EcsBaseUrl": "https://localhost:7117",
+  "EcsFsmSchoolUrl": "/Schools",
   "EcsFsmControllerUrl": "/FreeSchoolMeals",
   "EcsAuthorisationUrl": "/api/Login",
   "EcsAuthorisationUsername": "ecsUiUser",
