--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
 
-  "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
   //"EcsBaseUrl": "https://localhost:7117",
-  "EcsFsmSchoolUrl": "/Schools",
-  "EcsFsmControllerUrl": "/FreeSchoolMeals",
-  "EcsAuthorisationUrl": "/api/Login",
-  "EcsAuthorisationUsername": "ecsUiUser",
-  "EcsAuthorisationEmail": "ecsUi@education.gov.uk",
-  "EcsAuthorisationPassword": "QgX{P1*eB94lQy&"
+  "Api": {
+    "Host": "",
+    "AuthorisationUrl": "/api/Login",
+    "AuthorisationUsername": "",
+    "AuthorisationEmail": "",
+    "AuthorisationPassword": ""
+  }
 }
