--- a/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
+++ b/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.11.2" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
