Add comments throughout the check controller, set up basic session storage and for retrieving parent details ready for check answers page.
appsettings.json in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ FodyWeavers.xsd
 /CheckYourEligibility.WebApp/appsettings.Development.json
 /CheckYourEligibility.WebApp/appsettings.Development.json
 /.gitignore
+/CheckYourEligibility-FrontEnd/appsettings.json
