--- a/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
+++ b/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <Reference Include="CheckYourEligibility.Domain">
-      <HintPath>..\CheckYourEligibility.Domain.dll</HintPath>
+      <HintPath>..\CheckYourEligibility-Admin\CheckYourEligibility.Domain.dll</HintPath>
     </Reference>
   </ItemGroup>
 
