--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -14,5 +14,5 @@
   "EcsAuthorisationUrl": "/api/Login",
   "EcsAuthorisationUsername": "ecsUiUser",
   "EcsAuthorisationEmail": "ecsUi@education.gov.uk",
-  "EcsAuthorisationPassword": "QgX{P1*eB94lQy&"
+  "EcsAuthorisationPassword": "5ji-Dt:S]b:RU1["
 }
