When Child is added or removed from the page, set focus to the last child's firstname input.
Check answers page submits application to db using api call

application_sent page loads (needs finished)

--- a/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
+++ b/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
@@ -8,8 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.development.json" />
+    <Content Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Attributes\NinoAttribute.cs" />
     <Content Include="Attributes\NameAttribute.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.development.json" />
+    <None Include="appsettings.json" />
   </ItemGroup>
 
   <ItemGroup>
