Schools Journey current progress

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -7,12 +7,11 @@
   },
   "AllowedHosts": "*",
 
-  "EcsBaseUrl": "https://ecs-dev-as.azurewebsites.net",
-  //"EcsBaseUrl": "https://localhost:7117",
-  "EcsFsmSchoolUrl": "/Schools",
-  "EcsFsmControllerUrl": "/FreeSchoolMeals",
-  "EcsAuthorisationUrl": "/api/Login",
-  "EcsAuthorisationUsername": "ecsUiUser",
-  "EcsAuthorisationEmail": "ecsUi@education.gov.uk",
-  "EcsAuthorisationPassword": "5ji-Dt:S]b:RU1["
+  "Api": {
+    //"Host": "https://localhost:7117",
+    "Host": "https://ecs-dev-as.azurewebsites.net",
+    "AuthorisationUsername": "ecsUiUser",
+    "AuthorisationEmail": "ecsUi@education.gov.uk",
+    "AuthorisationPassword": "5ji-Dt:S]b:RU1["
+  }
 }
