--- a/CheckYourEligibility-Admin/CheckYourEligibility-Admin.csproj
+++ b/CheckYourEligibility-Admin/CheckYourEligibility-Admin.csproj
@@ -23,4 +23,11 @@
     <ProjectReference Include="..\CheckYourEligibility-FrontEnd.Services\CheckYourEligibility-FrontEnd.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="CheckYourEligibility.Domain">
+      <HintPath>..\CheckYourEligibility-Parent\CheckYourEligibility.Domain.dll</HintPath>
+      <HintPath>..\CheckYourEligibility-Admin\CheckYourEligibility.Domain.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
