Add gov.uk One Login journey
Co-authored-by: Sam Fallowfield <sam.fallowfield@education.gov.uk>

--- a/CheckYourEligibility-Parent/appsettings.json
+++ b/CheckYourEligibility-Parent/appsettings.json
@@ -8,8 +8,13 @@
   "AllowedHosts": "*",
 
   "Api": {
-    "Host": "https://ecs-dev-as.azurewebsites.net",
+    "Host": "",
     "AuthorisationUsername": "",
     "AuthorisationPassword": ""
-  }
+  },
+  "OneLogin": {
+    "ClientId": "",
+    "Host": ""
+  },
+  "Host": ""
 }
