--- a/pipeline/azure-pipeline.yml
+++ b/pipeline/azure-pipeline.yml
@@ -50,40 +50,52 @@ stages:
   - stage: DeployAppDev
     displayName: Deploy App Dev
     jobs:
-      - job:
-        pool:
-          name: Azure Pipelines
-          vmImage: 'windows-latest'
-        steps:
-          - task: DownloadPipelineArtifact@2
-            inputs:
-              buildType: 'current'
-              targetPath: '$(Pipeline.Workspace)'
-
-          - task: AzureRmWebAppDeployment@4
-            inputs:
-              ConnectionType: 'AzureRM'
-              azureSubscription: 's203d.azdo.deployment'
-              appType: 'webApp'
-              WebAppName: 'ecs-dev-as-frontend'
-              packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
+    - deployment: devdeploy
+      displayName: Deploy App Dev
+      pool:
+        name: Azure Pipelines
+        vmImage: 'windows-latest'
+      environment: DEVELOPMENT
+      strategy:
+        runOnce:
+          preDeploy:
+            steps:
+            - task: DownloadPipelineArtifact@2
+              inputs:
+                buildType: 'current'
+                targetPath: '$(Pipeline.Workspace)'
+          deploy:
+            steps:
+            - task: AzureRmWebAppDeployment@4
+              inputs:
+                ConnectionType: 'AzureRM'
+                azureSubscription: 's203d.azdo.deployment'
+                appType: 'webApp'
+                WebAppName: 'ecs-dev-as-frontend'
+                packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
   - stage: DeployAppTest
     displayName: Deploy App Test
     jobs:
-      - job:
-        pool:
-          name: Azure Pipelines
-          vmImage: 'windows-latest'
-        steps:
-          - task: DownloadPipelineArtifact@2
-            inputs:
-              buildType: 'current'
-              targetPath: '$(Pipeline.Workspace)'
-
-          - task: AzureRmWebAppDeployment@4
-            inputs:
-              ConnectionType: 'AzureRM'
-              azureSubscription: 's203t.azdo.deployment'
-              appType: 'webApp'
-              WebAppName: 'ecs-test-as-frontend'
-              packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
+    - deployment: testdeploy
+      displayName: Deploy App Test
+      pool:
+        name: Azure Pipelines
+        vmImage: 'windows-latest'
+      environment: TEST
+      strategy:
+        runOnce:
+          preDeploy:
+            steps:
+            - task: DownloadPipelineArtifact@2
+              inputs:
+                buildType: 'current'
+                targetPath: '$(Pipeline.Workspace)'
+          deploy:
+            steps:
+            - task: AzureRmWebAppDeployment@4
+              inputs:
+                ConnectionType: 'AzureRM'
+                azureSubscription: 's203t.azdo.deployment'
+                appType: 'webApp'
+                WebAppName: 'ecs-test-as-frontend'
+                packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
