--- a/CheckYourEligibility-Parent.Tests/CheckYourEligibility-Parent.Tests.csproj
+++ b/CheckYourEligibility-Parent.Tests/CheckYourEligibility-Parent.Tests.csproj
@@ -12,7 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
@@ -21,6 +23,12 @@
   <ItemGroup>
     <ProjectReference Include="..\CheckYourEligibility-FrontEnd.Services\CheckYourEligibility-FrontEnd.Services.csproj" />
     <ProjectReference Include="..\CheckYourEligibility-Parent\CheckYourEligibility-Parent.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CheckYourEligibility.Domain">
+      <HintPath>..\CheckYourEligibility-Parent\CheckYourEligibility.Domain.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
