Update continuous-deployment.yml for Azure Pipelines

--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -31,6 +31,7 @@ stages:
          targetType: inline
          script: |
           cd tests
+          cat package.json
           export CYPRESS_API_HOST="$(CYPRESS_API_HOST)"
           export CYPRESS_JWT_USERNAME=$(JWT_USERNAME)
           export CYPRESS_JWT_PASSWORD="$(JWT_PASSWORD)"
