Additional files for previous commit

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -12,6 +12,6 @@
     "Host": "https://ecs-dev-as.azurewebsites.net",
     "AuthorisationUsername": "ecsUiUser",
     "AuthorisationEmail": "ecsUi@education.gov.uk",
-    "AuthorisationPassword": "5ji-Dt:S]b:RU1["
+    "AuthorisationPassword": "ii5K%EJOdE7vPTMn"
   }
 }
