--- a/CheckYourEligibility-Parent/appsettings.json
+++ b/CheckYourEligibility-Parent/appsettings.json
@@ -8,8 +8,10 @@
   "AllowedHosts": "*",
 
   "Api": {
+    //"Host": "https://localhost:7117",
     "Host": "https://ecs-dev-as.azurewebsites.net",
-    "AuthorisationUsername": "",
-    "AuthorisationPassword": ""
+    "AuthorisationUsername": "ecsUiUser",
+    "AuthorisationEmail": "ecsUi@education.gov.uk",
+    "AuthorisationPassword": "ii5K%EJOdE7vPTMn"
   }
 }
