--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -34,6 +34,14 @@ stages:
             inputs:
               platform: '$(buildPlatform)'
               configuration: '$(buildConfiguration)'
+              resultsFolder: '$(build.ArtifactStagingDirectory)/Test/Results'
+              otherConsoleOptions: '/collect:"Code Coverage;Format=Cobertura"'  # <<<< this is the important bit
+              codeCoverageEnabled: True
+
+          - task: PublishCodeCoverageResults@1
+            inputs:
+              codeCoverageTool: 'Cobertura'
+              summaryFileLocation: '$(build.ArtifactStagingDirectory)/Test/Results/**/*.xml'
 
           - task: DotNetCoreCLI@2
             inputs:
