--- a/pipeline/continuous-integration.yml
+++ b/pipeline/continuous-integration.yml
@@ -34,6 +34,7 @@ stages:
             inputs:
               platform: '$(buildPlatform)'
               configuration: '$(buildConfiguration)'
+              runSettingsFile: 'CheckYourEligibility-Parent.Tests/.runsettings'
               resultsFolder: '$(build.ArtifactStagingDirectory)/Test/Results'
               otherConsoleOptions: '/collect:"Code Coverage;Format=Cobertura"'  # <<<< this is the important bit
               codeCoverageEnabled: True
