--- a/CheckYourEligibility-Admin/CheckYourEligibility-Admin.csproj
+++ b/CheckYourEligibility-Admin/CheckYourEligibility-Admin.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\focusChildNameInput.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Attributes\NinoAttribute.cs" />
     <Content Include="Attributes\NameAttribute.cs" />
   </ItemGroup>
@@ -21,6 +25,24 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CheckYourEligibility-FrontEnd.Services\CheckYourEligibility-FrontEnd.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CheckYourEligibility.Domain">
+      <HintPath>..\CheckYourEligibility-Parent\CheckYourEligibility.Domain.dll</HintPath>
+      <HintPath>..\CheckYourEligibility-Admin\CheckYourEligibility.Domain.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\js\schoolSearch.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\documents\" />
   </ItemGroup>
 
 </Project>
