sign in working

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -12,5 +12,34 @@
     "AuthorisationUsername": "",
     "AuthorisationEmail": "",
     "AuthorisationPassword": ""
+  },
+
+  "DfePublicApi": {
+    "BaseUrl": "<base_url>",
+    "ServiceAudience": "signin.education.gov.uk",
+    "ApiSecret": "<api_secret>",
+    "ClientId": "<client_id>"
+  },
+  "DfeSignIn": {
+    "Authority": "<authority>",
+    "MetaDataUrl": "<meta_data_url>",
+    "ClientId": "<client_id>",
+    "ClientSecret": "<client_secret>",
+    "CallbackUrl": "/auth/cb",
+    "SignoutCallbackUrl": "/signout/complete",
+    "SignoutRedirectUrl": "/account/signed-out",
+    "Scopes": [
+      "openid",
+      "email",
+      "profile",
+      "organisation"
+    ],
+    "CookieName": "sa-login",
+    "CookieExpireTimeSpanInMinutes": 60,
+    "GetClaimsFromUserInfoEndpoint": true,
+    "SaveTokens": true,
+    "SlidingExpiration": true,
+    "AccessDeniedPath": "/restricted",
+    "DiscoverRolesWithPublicApi": false
   }
 }
