--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -14,12 +14,6 @@
     "AuthorisationPassword": ""
   },
 
-  "DfePublicApi": {
-    "BaseUrl": "<base_url>",
-    "ServiceAudience": "signin.education.gov.uk",
-    "ApiSecret": "<api_secret>",
-    "ClientId": "<client_id>"
-  },
   "DfeSignIn": {
     "Authority": "<authority>",
     "MetaDataUrl": "<meta_data_url>",
@@ -38,8 +32,6 @@
     "CookieExpireTimeSpanInMinutes": 60,
     "GetClaimsFromUserInfoEndpoint": true,
     "SaveTokens": true,
-    "SlidingExpiration": true,
-    "AccessDeniedPath": "/restricted",
-    "DiscoverRolesWithPublicApi": false
+    "SlidingExpiration": true
   }
 }
