getting settings from KV

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -29,7 +29,8 @@
       "organisation"
     ],
     "CookieName": "sa-login",
-    "CookieExpireTimeSpanInMinutes": 60,
+    //"CookieExpireTimeSpanInMinutes": 60,
+    "CookieExpireTimeSpanInMinutes": 5,
     "GetClaimsFromUserInfoEndpoint": true,
     "SaveTokens": true,
     "SlidingExpiration": true
