--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,4 @@ FodyWeavers.xsd
 /CheckYourEligibility-Parent/appsettings.Development.json
 /CheckYourEligibility-Admin/appsettings.Development.json
 
+/tests/cypress.env.json
