--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -61,6 +61,40 @@ stages:
               targetPath: '$(Build.ArtifactStagingDirectory)'
               artifactName: 'checkYourEligibility-Parent'
 
+
+  - stage: RunCypressTests
+    displayName: Run Cypress Tests
+    jobs:
+    - job: 'SetUpCypress'
+      displayName: 'SetUpTests'
+      pool:
+        vmImage: ubuntu-latest
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: inline
+          script: |
+           cd tests
+           npm install
+      - task: Bash@3
+        displayName: 'RunTests'
+        inputs:
+         targetType: inline
+         script: |
+          cd tests
+          export CYPRESS_BASE_URL="$(CYPRESS_BASE_URL)"
+          export CYPRESS_JWT_USERNAME=$(JWT_USERNAME)
+          export CYPRESS_JWT_PASSWORD="$(JWT_PASSWORD)"
+          export AUTHORIZATION_HEADER="$(AUTHORIZATION_HEADER)"
+          export AUTH_SECRET="$(AUTH_SECRET)"
+          export AUTH_USERNAME="$(AUTH_USERNAME)"
+          export AUTH_PASSWORD="$(AUTH_PASSWORD)"
+          export ONEGOV_EMAIL="$(ONEGOV_EMAIL)"
+          export ONEGOV_PASSWORD="$(ONEGOV_PASSWORD)"
+          echo "${AUTHORIZATION_HEADER}"
+          npm run e2e:electron
+          echo "${AUTHORIZATION_HEADER}"
+          
   - stage: DeployAppDev
     displayName: Deploy App Dev
     jobs:
