Update continuous-deployment.yml for Azure Pipelines

--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -94,6 +94,8 @@ stages:
           echo "${AUTHORIZATION_HEADER}"
           npm run e2e:electron
           echo "${AUTHORIZATION_HEADER}"
+        env:
+          CYPRESS_DEBUG: 1
 
   - stage: DeployAppDev
     displayName: Deploy App Dev
