initial commit, catch up to previous branch

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -13,6 +13,11 @@
     "AuthorisationEmail": "",
     "AuthorisationPassword": ""
   },
+  "OneLogin": {
+    "ClientId": "",
+    "PrivateKey": "",
+    "Host":  ""
+  },
 
   "DfeSignIn": {
     "Authority": "<authority>",
