--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -20,8 +20,8 @@
     "ClientId": "<client_id>",
     "ClientSecret": "<client_secret>",
     "CallbackUrl": "/auth/cb",
-    "SignoutCallbackUrl": "/signout/complete",
-    "SignoutRedirectUrl": "/account/signed-out",
+    "SignoutCallbackUrl": "/home/index",
+    "SignoutRedirectUrl": "/",
     "Scopes": [
       "openid",
       "email",
