updated TestBase and ApplicationControllerTests

--- a/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
+++ b/CheckYourEligibility-Parent/CheckYourEligibility-Parent.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="appsettings.development.json" />
+    <None Include="appsettings.Development.json" />
     <None Include="appsettings.json" />
   </ItemGroup>
 
