--- a/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
+++ b/CheckYourEligibility-FrontEnd.Services/CheckYourEligibility-FrontEnd.Services.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+	<PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
