--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -6,12 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+
   "Api": {
     "Host": "",
     "AuthorisationUsername": "",
     "AuthorisationEmail": "",
     "AuthorisationPassword": ""
   },
+
   "DfeSignIn": {
     "Authority": "<authority>",
     "MetaDataUrl": "<meta_data_url>",
@@ -27,12 +29,10 @@
       "organisation"
     ],
     "CookieName": "sa-login",
+    //"CookieExpireTimeSpanInMinutes": 60,
     "CookieExpireTimeSpanInMinutes": 5,
     "GetClaimsFromUserInfoEndpoint": true,
     "SaveTokens": true,
     "SlidingExpiration": true
-  },
-  "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=4d9ece7a-07b7-4009-ac26-4e9c7125c9f6;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=0144193d-dac5-44f5-8457-6d4921dbc491"
   }
 }
