--- a/CheckYourEligibility-Admin.Tests/CheckYourEligibility-Admin.Tests.csproj
+++ b/CheckYourEligibility-Admin.Tests/CheckYourEligibility-Admin.Tests.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Attributes\**" />
+    <EmbeddedResource Remove="Attributes\**" />
+    <None Remove="Attributes\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
     <PackageReference Include="AutoFixture.Idioms" Version="4.18.1" />
@@ -62,7 +68,6 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Attributes\" />
   </ItemGroup>
 
 </Project>
