added app insights, set connection string empty and added to kv

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -34,5 +34,8 @@
     "GetClaimsFromUserInfoEndpoint": true,
     "SaveTokens": true,
     "SlidingExpiration": true
+  },
+  "ApplicationInsights": {
+    "ConnectionString": ""
   }
-}
+  }
