--- a/CheckYourEligibility-Admin/CheckYourEligibility-Admin.csproj
+++ b/CheckYourEligibility-Admin/CheckYourEligibility-Admin.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>CheckYourEligibility_FrontEnd</RootNamespace>
+    <ApplicationInsightsResourceId>/subscriptions/244821ce-c33f-48f4-9b47-0157b636c597/resourceGroups/s203d01-core1/providers/microsoft.insights/components/ecs-dev-ai-01</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,6 +30,7 @@
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.1" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
