--- a/CheckYourEligibility-Admin.Tests/CheckYourEligibility-Admin.Tests.csproj
+++ b/CheckYourEligibility-Admin.Tests/CheckYourEligibility-Admin.Tests.csproj
@@ -70,4 +70,10 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="CheckYourEligibility.Domain">
+      <HintPath>..\CheckYourEligibility-Parent\CheckYourEligibility.Domain.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
