parent pre-prod terraform

--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -158,3 +158,31 @@ stages:
         inputs:
          testResultsFiles: '**/combined-report.xml'
          searchFolder: 'tests'
+
+
+  - stage: DeployAppPP
+    displayName: Deploy App Pre-prod
+    jobs:
+    - deployment: ppdeploy
+      displayName: Deploy App Pre-prod
+      pool:
+        name: Azure Pipelines
+        vmImage: 'windows-latest'
+      environment: PRE-PROD
+      strategy:
+        runOnce:
+          preDeploy:
+            steps:
+            - task: DownloadPipelineArtifact@2
+              inputs:
+                buildType: 'current'
+                targetPath: '$(Pipeline.Workspace)'
+          deploy:
+            steps:
+            - task: AzureRmWebAppDeployment@4
+              inputs:
+                ConnectionType: 'AzureRM'
+                azureSubscription: 's203t.azdo.deployment'
+                appType: 'webApp'
+                WebAppName: 'ecs-pp-as-frontend'
+                packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
