--- a/pipeline/continuous-deployment-admin.yml
+++ b/pipeline/continuous-deployment-admin.yml
@@ -76,8 +76,8 @@ stages:
     - stage: RunCypressTestsDevEnv
     displayName: Run Cypress Tests On Dev Env
     jobs:
-    - job: 'SetUpCypress'
-      displayName: 'SetUpTests'
+    - job: 'SetUpCypressDevEnv'
+      displayName: 'SetUpTestsForDevEnv'
       pool:
         vmImage: ubuntu-latest
       steps:
@@ -147,8 +147,8 @@ stages:
   - stage: RunCypressTestsTestEnv
     displayName: Run Cypress Tests On Test Env
     jobs:
-    - job: 'SetUpCypress'
-      displayName: 'SetUpTests'
+    - job: 'SetUpCypressTestEnv'
+      displayName: 'SetUpTestsTestEnv'
       pool:
         vmImage: ubuntu-latest
       steps:
