--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,8 @@ FodyWeavers.xsd
 /tests/cypress.env.json
 /tests/results
 /CheckYourEligibility-Parent/appsettings.development.json
+/CheckYourEligibility-Parent/appsettings.Development.json
+/CheckYourEligibility-Admin/appsettings.development.json
+/CheckYourEligibility-Parent/appsettings.Development.json
+/CheckYourEligibility-Parent/appsettings.Development.json
+/CheckYourEligibility-Parent/appsettings.Development.json
