Increased logging to app insights

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -3,36 +3,44 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information",
+        //you can also define custom behavior by namespace, like if you don't want the thousands of messages you'll get from HttpClient
+        "System.Net.Http.HttpClient": "Warning"
+      }
+    },
+    "AllowedHosts": "*",
+
+    "Api": {
+      "Host": "",
+      "AuthorisationUsername": "",
+      "AuthorisationEmail": "",
+      "AuthorisationPassword": ""
+    },
+
+    "DfeSignIn": {
+      "Authority": "<authority>",
+      "MetaDataUrl": "<meta_data_url>",
+      "ClientId": "<client_id>",
+      "ClientSecret": "<client_secret>",
+      "CallbackUrl": "/auth/cb",
+      "SignoutCallbackUrl": "/home/index",
+      "SignoutRedirectUrl": "/",
+      "Scopes": [
+        "openid",
+        "email",
+        "profile",
+        "organisation"
+      ],
+      "CookieName": "sa-login",
+      //"CookieExpireTimeSpanInMinutes": 60,
+      "CookieExpireTimeSpanInMinutes": 5,
+      "GetClaimsFromUserInfoEndpoint": true,
+      "SaveTokens": true,
+      "SlidingExpiration": true
     }
-  },
-  "AllowedHosts": "*",
-
-  "Api": {
-    "Host": "",
-    "AuthorisationUsername": "",
-    "AuthorisationEmail": "",
-    "AuthorisationPassword": ""
-  },
-
-  "DfeSignIn": {
-    "Authority": "<authority>",
-    "MetaDataUrl": "<meta_data_url>",
-    "ClientId": "<client_id>",
-    "ClientSecret": "<client_secret>",
-    "CallbackUrl": "/auth/cb",
-    "SignoutCallbackUrl": "/home/index",
-    "SignoutRedirectUrl": "/",
-    "Scopes": [
-      "openid",
-      "email",
-      "profile",
-      "organisation"
-    ],
-    "CookieName": "sa-login",
-    //"CookieExpireTimeSpanInMinutes": 60,
-    "CookieExpireTimeSpanInMinutes": 5,
-    "GetClaimsFromUserInfoEndpoint": true,
-    "SaveTokens": true,
-    "SlidingExpiration": true
   }
-}
