--- a/CheckYourEligibility-Parent/appsettings.json
+++ b/CheckYourEligibility-Parent/appsettings.json
@@ -3,6 +3,15 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information",
+        //you can also define custom behavior by namespace, like if you don't want the thousands of messages you'll get from HttpClient
+        "System.Net.Http.HttpClient": "Warning"
+      }
     }
   },
   "AllowedHosts": "*",
