--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -229,3 +229,31 @@ stages:
                 appType: 'webApp'
                 WebAppName: 'ece-pp-as-frontend'
                 packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
+
+
+  - stage: DeployAppProd
+    displayName: Deploy App Production
+    jobs:
+      - deployment: deploy
+        displayName: Deploy App Production
+        pool:
+          name: Azure Pipelines
+          vmImage: 'windows-latest'
+        environment: PROD
+        strategy:
+          runOnce:
+            preDeploy:
+              steps:
+                - task: DownloadPipelineArtifact@2
+                  inputs:
+                    buildType: 'current'
+                    targetPath: '$(Pipeline.Workspace)'
+            deploy:
+              steps:
+                - task: AzureRmWebAppDeployment@4
+                  inputs:
+                    ConnectionType: 'AzureRM'
+                    azureSubscription: 's203t.azdo.deployment'
+                    appType: 'webApp'
+                    WebAppName: 'ece-pp-as-frontend'
+                    packageForLinux: '$(Pipeline.Workspace)/checkYourEligibility-Parent/CheckYourEligibility-Parent.zip'
