Rename DEV environment

--- a/pipeline/continuous-deployment.yml
+++ b/pipeline/continuous-deployment.yml
@@ -69,7 +69,7 @@ stages:
       pool:
         name: Azure Pipelines
         vmImage: 'windows-latest'
-      environment: DEVELOPMENT
+      environment: DEV
       strategy:
         runOnce:
           preDeploy:
