fix unit tests and rename config values

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -20,6 +20,8 @@
     "AuthorisationEmail": "",
     "AuthorisationPassword": ""
   },
+  "BulkUploadAttemptLimit": "",
+  "BulkEligibilityCheckLimit": "", 
   "DfeSignIn": {
     "Authority": "<authority>",
     "MetaDataUrl": "<meta_data_url>",
