url in app settings and removed parent access to form

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -21,7 +21,7 @@
     "AuthorisationPassword": ""
   },
   "BulkUploadAttemptLimit": "",
-  "BulkEligibilityCheckLimit": "", 
+  "BulkEligibilityCheckLimit": "",
   "DfeSignIn": {
     "Authority": "<authority>",
     "MetaDataUrl": "<meta_data_url>",
@@ -41,5 +41,6 @@
     "GetClaimsFromUserInfoEndpoint": true,
     "SaveTokens": true,
     "SlidingExpiration": true
-  }
+  },
+  "ContactUsUrl": "https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u"
 }
