add values to new bulk upload config settings created during ithc fixes related to rate-limiting

--- a/CheckYourEligibility-Admin/appsettings.json
+++ b/CheckYourEligibility-Admin/appsettings.json
@@ -20,8 +20,8 @@
     "AuthorisationEmail": "",
     "AuthorisationPassword": ""
   },
-  "BulkUploadAttemptLimit": "",
-  "BulkEligibilityCheckLimit": "",
+  "BulkUploadAttemptLimit": 10,
+  "BulkEligibilityCheckLimit": 250,
   "DfeSignIn": {
     "Authority": "<authority>",
     "MetaDataUrl": "<meta_data_url>",
