clarity app settings and tests passing - can't persisit over sesssions

--- a/CheckYourEligibility-Parent/appsettings.json
+++ b/CheckYourEligibility-Parent/appsettings.json
@@ -9,13 +9,11 @@
         "Default": "Debug",
         "System": "Information",
         "Microsoft": "Information",
-        //you can also define custom behavior by namespace, like if you don't want the thousands of messages you'll get from HttpClient
         "System.Net.Http.HttpClient": "Warning"
       }
     }
   },
   "AllowedHosts": "*",
-
   "Api": {
     "Host": "",
     "AuthorisationUsername": "",
@@ -28,6 +26,6 @@
   },
   "Host": "",
   "Clarity": {
-    "Parent": ""
+    "Parent": "otrys2sks2"
   }
 }
